--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "hitclub-taixiu",
+  "name": "nodejs",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "commonjs",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/node": "^22.13.11",
     "cors": "^2.8.5",
-    "node-fetch": "^2.6.9"
+    "express": "^5.1.0",
+    "node-fetch": "^2.7.0"
   }
 }
