--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "nodejs",
+  "name": "hitclub-taixiu-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "HitClub Tài Xỉu proxy API (Node.js)",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.13.11",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "node-fetch": "^2.7.0"
+    "express": "^4.19.2",
+    "node-fetch": "^2.7.0",
+    "cors": "^2.8.5"
   }
 }
